# gpu-exercises

./: CMakeCache.txt  CMakeLists.txt  Eigensolver.cu  Eigensolver3.cu  README  README.md  a.out  const_mem  conv  conv.cu  conv1D.cpp  conv1D_vanilla.cu  conv3D  conv3D.cu  conv_derivative.cu  eigensolver2.cu  exp1.sh  exp2.sh  heatdist  heatdist.cu  ioexample.cpp  matrixMul  matrixMul.cu  matrixMul_tiled  matrixMul_tiled.cu  nn.cpp  picture  query  query.cu  vectoradd  vectoradd.cu  vectoradd_const
conv/: Makefile  conv.cu  run.sh
conv/train/: conv_derivative.cu  train.cbp  train.cu
hello/: const_mem.cu  conv.cu  conv1D_tiled.cu  picture.cu  query.cu  vectoradd.cu  vectoradd_const.cu
train/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
